Update foto profil

--- a/public/index.html
+++ b/public/index.html
@@ -77,8 +77,10 @@
       <a href="#" class="topbar-btn">Download</a> -->
   
       <!-- HAMBURGER -->
-      <button class="topbar-toggle" aria-label="Menu">
-        ☰
+      <button class="hamburger" aria-label="Menu">
+        <span></span>
+        <span></span>
+        <span></span>
       </button>
   
     </div>
@@ -89,7 +91,7 @@
       <a href="#produk">Produk</a>
       <a href="#faq">FAQ</a>
       <a href="#about">About</a>
-      <a class="mobile-btn" href="#">Download App</a>
+      <!-- <a class="mobile-btn" href="#">Download App</a> -->
     </div>
   </header>
   
