--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
       </h1>
 
       <div class="hero-actions">
-        <a class="hero-btn-primary" href="https://play.google.com/store/apps/details?id=com.roblox.client" download>
+        <a class="hero-btn-primary" href="https://drive.google.com/file/d/1tHfcLnZsl9yDe5AlaNXoCGX5o95rMz0J/view?usp=drivesdk" download>
           Download PalaDewi <span aria-hidden="true">›</span>
         </a>
       </div>
