--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,16 @@
 
   <link rel="stylesheet" href="/style.css" />
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17889884686"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17889884686');
+</script>
+
   <!-- JSON-LD (LocalBusiness + WebSite) -->
   <script type="application/ld+json">
   {
